--- a/PA1_template.html
+++ b/PA1_template.html
@@ -240,7 +240,8 @@ library(gridExtra)
 <pre><code class="r"># Go to the directory where the activity.csv file has been unzipped and read the file in to a dataframe
 # coercing the string data in column 2 in to a date format.
 setwd(&quot;~/Dropbox/Learning/Coursera/Data Science/Reproducible Research/RepData_PeerAssessment1&quot;)
-activities &lt;- read.csv(file=&quot;activity.csv&quot;, header=TRUE, na.strings=&quot;NA&quot;, colClasses=c(&quot;integer&quot;,&quot;Date&quot;,&quot;integer&quot;))
+activities &lt;- read.csv(file=&quot;activity.csv&quot;, header=TRUE, na.strings=&quot;NA&quot;, 
+                       colClasses=c(&quot;integer&quot;,&quot;Date&quot;,&quot;integer&quot;))
 </code></pre>
 
 <h2>What is mean total number of steps taken per day?</h2>
